--- a/react-vite-hatvp-dataviz/index.html
+++ b/react-vite-hatvp-dataviz/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HATVP Organization Mentions</title>
+    <title>HATVP Data Visualizations</title>
   </head>
   <body class="min-h-screen bg-gray-50 text-gray-900">
     <div id="root"></div>
